--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- chartFx -->
+        <!-- chartFx
         <dependency>
             <groupId>io.fair-acc</groupId>
             <artifactId>chartfx</artifactId>
@@ -50,6 +50,7 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.9</version>
         </dependency>
+        -->
     </dependencies>
 
     <build>
